Use custom docker images with Kubernetes v1.22+ fixes

--- a/quick-install/trow.yaml
+++ b/quick-install/trow.yaml
@@ -114,7 +114,7 @@ spec:
 #            scheme: HTTPS
       initContainers:
       - name: trow-init
-        image: containersol/trow:init
+        image: hexmukesh/trow:init
         command: ["/init.sh"]
         imagePullPolicy: Always
         env:
