--- a/quick-install/trow-gke.yaml
+++ b/quick-install/trow-gke.yaml
@@ -114,7 +114,7 @@ spec:
       initContainers:
       - name: trow-init
         command: ["/init.sh"]
-        image: containersol/trow:init
+        image: hexmukesh/trow:init
         imagePullPolicy: Always
         env:
           - name: POD_NAME
